--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 #logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70px;
+
+    width: 50px;
     height: 30px;
-    margin-top: 3px;
+    
     margin: 0% 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-0%);
 
 }
 nav{
