--- a/style2.css
+++ b/style2.css
@@ -1,9 +1,53 @@
-#form{
+nav{
+    border: 1px solid black ;
+    background-color: grey;
+    border-radius: 7px;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+ 
     
+}
+*{
+    padding: 0px;
+    margin: 0px;
+}
+.links{
+    margin-left: 70px;
+    color: black;
+    font-size: 15px;
+    
+    
+
+
+
+}
+
+#bg{
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 300px;
+    margin-right: 300px;
+}
+#logo{
+
+    width: 50px;
+    height: 30px;
+    
+    margin: 0% 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-0%);
+
+}
+#form{
+    height: 80vh;
+    width: 60vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    margin-left: 200px;
+    margin-top: 20px;
+
     background-color: gray ;
 }
